@@ -110,6 +110,10 @@ enum out123_parms
  *  dropouts. Value <= 0 uses some default.
  */
 ,	OUT123_PROPFLAGS /**< integer, query driver/device property flags (r/o) */
+,	OUT123_NAME /**< string, name of this instance (may be NULL!);
+ * The value returned by out123_getparam() might be different if the audio
+ * backend changed it (to be unique among clients, p.ex.).
+ * TODO: The name provided here is used as prefix in diagnostic messages. */
 };
 
 /** Flags to tune out123 behaviour */
@@ -245,11 +249,18 @@ int out123_set_buffer(out123_handle *ao, size_t buffer_bytes);
  * \param code parameter code
  * \param value input value for integer parameters
  * \param fvalue input value for floating point parameters
+ * \param svalue input value for string parameters (contens are copied)
  * \return 0 on success, OUT123_ERR on error.
  */
 MPG123_EXPORT
 int out123_param( out123_handle *ao, enum out123_parms code
-,                 long value, double fvalue );
+,                 long value, double fvalue, const char *svalue );
+#define out123_param_int(ao, code, value) \
+	out123_param((ao), (code), (value), 0., NULL)
+#define out123_param_float(ao, code, value) \
+	out123_param((ao), (code), 0, (value), NULL)
+#define out123_param_string(ao, code, value) \
+	out123_param((ao), (code), 0, 0., (value))
 
 /** Get a specific parameter, for a specific out123_handle, using a parameter
  *  code chosen from the out123_parms enumeration, to the specified value.
@@ -257,11 +268,19 @@ int out123_param( out123_handle *ao, enum out123_parms code
  * \param code parameter code
  * \param ret_value output address for integer parameters
  * \param ret_fvalue output address for floating point parameters
+ * \param ret_svalue output address for string parameters (pointer to
+ *        internal memory, so no messing around, please)
  * \return 0 on success, OUT123_ERR on error (bad parameter name or bad handle).
  */
 MPG123_EXPORT
 int out123_getparam( out123_handle *ao, enum out123_parms code
-,                    long *ret_value, double *ret_fvalue );
+,                    long *ret_value, double *ret_fvalue, char* *ret_svalue );
+#define out123_getparam_int(ao, code, value) \
+	out123_getparam((ao), (code), (value), NULL, NULL)
+#define out123_getparam_float(ao, code, value) \
+	out123_getparam((ao), (code), NULL, (value), NULL)
+#define out123_getparam_string(ao, code, value) \
+	out123_getparam((ao), (code), NULL, NULL, (value))
 
 /** Copy parameters from another out123_handle.
  * \param ao handle
