@@ -49,6 +49,9 @@
   mpg123 to actually parse any XML!
 - Ignore whitespace after HTTP MIME types (esp. before a ";").
 - Some testing on AIX 7.1 . Generic decoder works, audio output builds.
+- Added --name to mpg123 and out123 for providing client name p.ex. for JACK.
+  There is no default of appending the PID to "mpg123" as client name anymore,
+  just plain "mpg123" or "out123".
 
 1.22.4
 ---
